--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.blankCredentialsTest()[pri:2, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">blankCredentialsTest</td> 
+<tr bgcolor="756ead">  <td>19/11/15 15:21:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgetPasswordTest()[pri:3, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">forgetPasswordTest</td> 
   <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:31</td>   <td>-9731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpageCredentialsTest()[pri:1, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">loginpageCredentialsTest</td> 
-  <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:23</td>   <td>-17461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<tr bgcolor="756ead">  <td>19/11/15 15:20:49</td>   <td>-15450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:35</td>   <td>-5878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:34</td>   <td>-6627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/13 19:53:41</td>   <td>268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<tr bgcolor="756ead">  <td>19/11/15 15:21:10</td>   <td>5936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
 </table>
