--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="756ead">  <td>19/11/15 15:20:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>19/11/16 17:37:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/11/15 15:21:04</td>   <td>15450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgetPasswordTest()[pri:3, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">forgetPasswordTest</td> 
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:21</td>   <td>60503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpageCredentialsTest()[pri:1, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">loginpageCredentialsTest</td> 
   <td>main@1899073220</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/11/15 15:21:10</td>   <td>21386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@7d9d1a19]">&lt;&lt;tearDown</td> 
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:29</td>   <td>68248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:31</td>   <td>69994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:50</td>   <td>89254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.blankCredentialsTest()[pri:2, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">blankCredentialsTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:50</td>   <td>89887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:38:52</td>   <td>91335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:39:07</td>   <td>106289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgetPasswordTest()[pri:3, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">forgetPasswordTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/16 17:39:11</td>   <td>109902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.testcases.LoginPageTest@6d4b1c02]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
 </table>
